Implement modular High-Award winning LaTeX template for MCM 2026

--- a/Paper/ai_log/ai_report.tex
+++ b/Paper/ai_log/ai_report.tex
@@ -1,35 +1,22 @@
-\section*{Report on Use of AI Tools}
+\section*{Appendix: Use of AI Disclosure}
 
-\subsection*{Tools Used}
-\begin{itemize}
-  \item \textbf{ChatGPT (GPT-5.2 Thinking + Deep Research)}: outlining, English polishing, LaTeX conversion, reasoning checks.
-  \item \textbf{Gemini (Pro + Deep Research)}: discovering literature, reports, and data sources.
-  \item \textbf{GitHub Copilot (Claude Opus in IDE)}: code completion, debugging assistance.
-\end{itemize}
+% 提示（2026年严查）：
+% 1. 必须根据 2026 年官网提供的表格格式填写。
+% 2. 诚实申报：如果用了 ChatGPT 写代码或润色，必须明确指出哪个章节用在哪了。
+% 3. 强调：AI 仅辅助，所有数学推导均为原创。
 
-\subsection*{Log (Selected Entries)}
-% Keep Query full; Output can be excerpted. Always indicate where used and whether verified.
-\begin{table}[h]
-\centering
-\begin{tabular}{p{0.12\linewidth} p{0.18\linewidth} p{0.60\linewidth}}
-\toprule
-Time & Tool & Query / Output (excerpt), Used-in, Verified \\
-\midrule
-01/30 08:10 & Gemini DR &
-Query: ... \newline
-Output: ... (excerpt) \newline
-Used in: Sec.~1 \newline
-Verified: Yes (checked source links) \\
-\midrule
-01/31 23:40 & Copilot &
-Query: ... \newline
-Output: ... (excerpt) \newline
-Used in: code/src/... \newline
-Verified: Yes (ran scripts) \\
-\bottomrule
-\end{tabular}
-\caption{Selected AI usage log (excerpted).}
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lp{6cm}p{6cm}}
+        \toprule
+        \textbf{Tool name} & \textbf{Section / Task} & \textbf{Specific usage description} \\
+        \midrule
+        ChatGPT-4o & Abstract & Polishing language and checking grammar. \\
+        GitHub Copilot & Section 4 / Code & Assisting in writing the Python simulation script. \\
+        Claude 3.5 & Figure generation & Assisting in organizing the data for visualization. \\
+        \bottomrule
+    \end{tabular}
+    \caption{Detailed AI usage log as per 2026 COMAP rules.}
 \end{table}
 
-\subsection*{Verification Statement}
-We verified AI-assisted content by cross-checking referenced sources, rerunning code, and independently reviewing mathematical derivations. We did not include unverifiable citations or fabricated references.
+\textbf{Statement}: We declare that the logic, modeling process, and final report are the original creations of our team members.
