--- a/Paper/sections/00_abstract.tex
+++ b/Paper/sections/00_abstract.tex
@@ -1,11 +1,17 @@
 \begin{abstract}
-% TODO: Replace with final abstract near the end.
-This paper proposes an integrated modeling framework to address the problem of \emph{[TODO: topic]}.
-We develop a \emph{[TODO: model name]} and evaluate it using \emph{[TODO: metrics / validation]}.
-Results indicate that \emph{[TODO: key finding]}.
-Finally, we provide actionable recommendations for \emph{[TODO: stakeholders]}.
+% 提示：
+% 1. 摘要是论文的灵魂！评委通常只看这一页便决定了论文的起评分。
+% 2. 结构建议（4-5段）：
+%    - 第一段：简述背景并明确指出解决了什么核心问题。
+%    - 第二段：针对问题一，采用了什么模型/算法，得到了什么关键结论。
+%    - 第三段：针对问题二，核心创新点在哪（如：引入了XX权重，改进了XX算子）。
+%    - 后续段落：模型验证的效果、政策建议的精髓。
+% 3. 文笔：多用被动语态（is developed, is utilized），避免 I/We。
+
+Abstract content goes here. \lipsum[1]
 
 \begin{keywords}
-Mathematical Modeling; Sensitivity Analysis; Numerical Simulation.
+    Data Cleaning, Sensitivity Analysis, Policy Recommendation, Machine Learning.
 \end{keywords}
+
 \end{abstract}
