--- a/Paper/sections/01_intro.tex
+++ b/Paper/sections/01_intro.tex
@@ -1,19 +1,16 @@
-% Background + problem restatement + what you do + paper structure
+\section{Introduction}
 
-\subsection{Background}
-[TODO: 5--8 sentences background with credible sources.]
+% 提示：
+% 1. Background: 不要堆砌废话，要层层递进，引用权威文献证明问题的重要性。
+% 2. Problem Restatement: 千万不要翻原题！用你自己的话把题目转化为“数学语言”。
+% 3. Our Contributions: 建议用列表形式给出本文的 3-5 个亮点（例如：建立了层次化分析模型、使用了动态权重等）。
 
-\subsection{Problem Restatement}
-We interpret the problem as follows:
-\begin{itemize}
-  \item [TODO: bullet 1]
-  \item [TODO: bullet 2]
-  \item [TODO: bullet 3]
-\end{itemize}
+\subsection{Problem Background}
+\lipsum[2]
 
-\subsection{Our Contributions}
-\begin{itemize}
-  \item We propose [TODO].
-  \item We design [TODO] to validate robustness.
-  \item We derive policy implications for [TODO].
-\end{itemize}
+\subsection{Expectations and Objectives}
+\lipsum[3]
+
+\subsection{Literature Review}
+% 提示：适当引用前人研究可以显得你们态度认真、专业功底深厚。
+As discussed in \cite{example_cite}, traditional models fail to consider...
