--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -3,7 +3,6 @@
 
 \documentclass{mcmthesis} 
 \mcmsetup{
-    CTANstyle = true,       
     tcn = {2617892},        
     problem = {C},          
     sheet = true,           
@@ -15,6 +14,7 @@
 \usepackage{palatino}       
 \usepackage{lipsum}         
 \usepackage{lastpage}       
+\usepackage{float}          % 修复 [H] 选项错误
 
 % --- 核心功能宏包 ---
 \usepackage{booktabs}       
@@ -27,14 +27,18 @@
 \usepackage{xcolor}         
 \usepackage{enumitem}       
 
+% --- 页面设置修正 ---
+\setlength{\headheight}{15pt}
+
 % --- 参考文献 ---
 \usepackage[backend=biber, style=gb7714-2015]{biblatex} 
 \addbibresource{ref.bib}
 
 % --- 自定义命令 ---
-\newcommand{\autoref}[1]{Fig. \ref{#1}} 
+\renewcommand{\autoref}[1]{Fig. \ref{#1}} % 使用 renewcommand 修复定义冲突
 
 \title{Your Professional Title for the MCM 2026 Problem}
+\author{Team \textsuperscript{\#} 2617892}
 
 \begin{document}
 
