--- a/Paper/ref.bib
+++ b/Paper/ref.bib
@@ -1,3 +1,10 @@
+@article{example_cite,
+  title   = {Example Reference for MCM/ICM Thesis},
+  author  = {Author, A.},
+  journal = {Journal of Mathematical Modeling},
+  year    = {2026}
+}
+
 @article{todo_ref1,
   title   = {TODO: Add real reference title},
   author  = {TODO},
