完善论文整体框架与核心模型章节
- 深度重构 main.tex：整合常用宏包、优化页码策略及引用规范；
- 重写 Section 3 (Assumptions)：补充了数据完整性、平稳性及政策滞后等 5 项核心假设，并整理了标准符号表；
- 完善 Section 4 (Model)：构建了多目标优化框架，推导了图拉普拉斯紧凑形式，并手写了投影梯度下降算法的伪代码及复杂度分析；
- 结构调整：将 AI Report 移至 appendices 目录，并更新文件结构。

--- a/Paper/sections/02_data.tex
+++ b/Paper/sections/02_data.tex
@@ -1,4 +1,5 @@
 \section{Data Exploration and Preprocessing}
+\label{sec:data}
 
 % 提示（C题核心区）：
 % 1. Data Cleaning: 提到如何处理缺失值（均值/插值？）、异常值（3 Sigma？箱线图？）。
