--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -1,106 +1,195 @@
-% !Tool = xelatex
-% !BIB = biber
+% MCM/ICM 2026 LaTeX 主控文件
+% 编译：XeLaTeX + Biber
+% !TEX program = xelatex
+% !BIB program = biber
 
-\documentclass{mcmthesis} 
+\documentclass{mcmthesis}
+
+% --- 兼容性补丁 ---
+% 避免旧的 .aux/.toc 中残留的 \thechapter（常见于曾启用 algochapter 时）导致 hyperref 报错
+\newcounter{chapter}
+\renewcommand{\thechapter}{\arabic{chapter}}
+
+% --- MCM 题目配置 ---
+% 【重要】比赛时务必修改 tcn 为你的真实队伍编号
 \mcmsetup{
-    tcn = {2617892},        
-    problem = {C},          
-    sheet = true,           % sheet=true 会自动生成官方要求的摘要首页
-    titleinsheet = true,    
-    keywordsinsheet = true,
-    titlepage = false       % 禁用独立的标题页，防止摘要重复
+    tcn = {2617892},        % Team Control Number（队伍编号）
+    problem = {C},          % 选择的题目 (A/B/C/D/E/F)
+    sheet = true,           % 生成官方 Summary Sheet（摘要首页）
+    titleinsheet = true,    % 在 Summary Sheet 上显示标题
+    keywordsinsheet = true, % 在 Summary Sheet 上显示关键词
+    titlepage = false       % 禁用独立标题页，防止摘要重复
 }
 
-% --- 基础宏包 ---
-\usepackage{palatino}       
-\usepackage{lipsum}         
-\usepackage{lastpage}       
-\usepackage{float}          % 修复 [H] 选项错误
-
-% --- 核心功能宏包 ---
-\usepackage{booktabs}       
-\usepackage{longtable}      
-\usepackage{amsmath, amssymb, amsthm} 
-\usepackage[ruled, linesnumbered]{algorithm2e} 
-\usepackage{listings}       
-\usepackage{subcaption}     
-\usepackage{graphicx}       
-\usepackage{xcolor}         
-\usepackage{enumitem}       
-
-% --- 页面设置修正 ---
-\setlength{\headheight}{15pt}
-
-% --- 自定义页码计数器（通过 .aux 文件跨编译传递）---
-\newcounter{mainpages}   % 用于保存正文总页数
-\newcounter{aipages}     % 用于保存 AI Report 总页数
-
-% 定义写入和读取 aux 文件的命令
+% 目录开关：若模板提供 \showtoctrue，则显式开启
 \makeatletter
-\newcommand{\savemainpages}{%
-  \immediate\write\@auxout{\string\setcounter{mainpages}{\the\value{page}}}%
-}
-\newcommand{\saveaipages}{%
-  \immediate\write\@auxout{\string\setcounter{aipages}{\the\value{page}}}%
-}
+\@ifundefined{showtoctrue}{}{\showtoctrue}
 \makeatother
 
-% --- 参考文献 ---
-\usepackage[backend=biber, style=gb7714-2015]{biblatex} 
+% ============================================================================
+%                              宏包加载区
+% ============================================================================
+
+% --- 字体与排版 ---
+\usepackage{palatino}
+\usepackage{microtype}
+\setlength{\emergencystretch}{2em}
+\usepackage{lipsum}             % 占位文字（提交前删除）
+
+% --- 页面与布局 ---
+\usepackage{lastpage}           % 获取总页数
+\usepackage{float}              % 强制图表位置 [H] 选项
+\usepackage{geometry}           % 页边距微调（如需）
+\setlength{\headheight}{15pt}   % 修复 fancyhdr 警告
+
+% --- 数学公式 ---
+\usepackage{amsmath, amssymb, amsthm}  % AMS 数学三件套
+\usepackage{mathtools}          % amsmath 增强版
+
+% --- 表格美化（核心！）---
+\usepackage{booktabs}           % 【必须】三线表：\toprule, \midrule, \bottomrule
+\usepackage{tabularx}           % 【必须】自动列宽表格，支持长文本换行
+\usepackage{longtable}          % 跨页长表格
+\usepackage{multirow}           % 表格单元格合并
+\usepackage{array}              % 表格列格式增强
+
+% --- 算法与伪代码（顶会风格）---
+% 【重要】使用 ruled + vlined + linesnumbered 呈现计算机顶会论文风格
+% 说明：mcmthesis 为 article 体裁，没有 chapter 计数器，需移除 algochapter 选项
+\usepackage[ruled, vlined, linesnumbered]{algorithm2e}
+\SetAlgorithmName{Algorithm}{algorithm}{List of Algorithms}
+\SetKwInput{KwIn}{Input}        % 输入
+\SetKwInput{KwOut}{Output}      % 输出
+\SetKwInput{KwData}{Data}       % 数据
+\SetKwInput{KwResult}{Result}   % 结果
+
+% --- 代码高亮 ---
+\usepackage{listings}
+\lstset{
+    basicstyle=\small\ttfamily,
+    keywordstyle=\color{blue},
+    commentstyle=\color{gray},
+    numbers=left,
+    numberstyle=\tiny\color{gray},
+    frame=single,
+    breaklines=true,
+    tabsize=4
+}
+
+% --- 图形与颜色 ---
+\usepackage{graphicx}           % 插入图片
+\usepackage{subcaption}         % 子图
+\usepackage{xcolor}             % 颜色支持
+\usepackage{tikz}               % 绘图（流程图等）
+\usetikzlibrary{shapes, arrows, positioning, calc}
+
+% --- 列表与枚举 ---
+\usepackage{enumitem}           % 自定义列表样式
+\setlist[enumerate]{itemsep=0pt, parsep=0pt}  % 紧凑列表
+
+% --- 超链接（放在最后加载）---
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue!70!black,
+    citecolor=green!50!black,
+    urlcolor=blue!80!black
+}
+
+% --- 参考文献配置 ---
+% 【提示】可根据需要切换为 IEEE 风格: style=ieee
+\usepackage[backend=biber, style=ieee, sorting=none]{biblatex}
 \addbibresource{ref.bib}
 
-% --- 自定义命令 ---
-\renewcommand{\autoref}[1]{Fig. \ref{#1}} % 使用 renewcommand 修复定义冲突
+% ============================================================================
+%                          自定义计数器与命令
+% ============================================================================
 
-\title{Your Professional Title for the MCM 2026 Problem}
-\author{Team \textsuperscript{\#} 2617892}
+% --- 正文页数计数器（实现 "Page X of Y" 功能）---
+\newcounter{mainpages}          % 保存正文总页数
 
+% 写入 aux 文件的命令
+\makeatletter
+\newcommand{\savemainpages}{%
+    \immediate\write\@auxout{\string\setcounter{mainpages}{\the\value{page}}}%
+}
+
+\makeatother
+
+% --- 自定义引用命令 ---
+\newcommand{\figref}[1]{Fig.~\ref{#1}}      % 图引用
+\newcommand{\tabref}[1]{Table~\ref{#1}}     % 表引用
+\newcommand{\eqnref}[1]{Eq.~(\ref{#1})}     % 公式引用
+\newcommand{\algref}[1]{Algorithm~\ref{#1}} % 算法引用
+\newcommand{\secref}[1]{Section~\ref{#1}}   % 章节引用
+
+% ============================================================================
+%                              文档元信息
+% ============================================================================
+
+\title{A Data-Driven Multi-Objective Optimization Framework for \\
+       Sustainable Resource Allocation: An MCM 2026 Approach}
+\author{Team \#2617892}
+
+% ============================================================================
+%                              正文开始
+% ============================================================================
 \begin{document}
 
-% --- 00 摘要页 (Summary Sheet) ---
-% 注意：mcmthesis 的摘要页（Summary Sheet）是由 \maketitle 命令生成的。
-% 它会自动抓取 \begin{abstract} 中的内容。
+% 页码策略：从 Summary 起连续计数；Summary/目录隐藏页码但计入总页数
+\pagenumbering{arabic}
+\setcounter{page}{1}
+
+% ========================== PART 0: 摘要页 ==========================
+% 【说明】mcmthesis 的 \maketitle 会自动生成官方 Summary Sheet
+% 摘要内容在 sections/00_abstract.tex 中定义
+% Summary Sheet：隐藏页码但保留计数
+\pagestyle{empty}
 \input{sections/00_abstract.tex}
 \maketitle
+\thispagestyle{empty}
 
-% 已移除多余标题页，确保摘要仅在首页显示
-
-% --- 目录设置 (如需目录请取消注释) ---
-% \tableofcontents
-
-% --- 正文开始 ---
+% ========================== PART 1: 目录页 ==========================
+% 【重要】目录页使用罗马数字编号 (i, ii, ...)，不计入 25 页限制
 \newpage
-\setcounter{page}{1}
-\pagestyle{fancy} % 恢复页眉页脚
-\fancyhead[R]{Page \thepage\ of \themainpages} % 使用自定义计数器
-\pagenumbering{arabic} 
+\pagestyle{empty}
+\tableofcontents
+\thispagestyle{empty}
 
-\input{sections/01_intro.tex} 
-\input{sections/02_data.tex}         
-\input{sections/03_assumptions.tex}  
-\input{sections/04_model.tex}        
-\input{sections/05_solution.tex}     
-\input{sections/06_validation.tex}   
-\input{sections/07_policy.tex}       
-\input{sections/08_strengths.tex}    
+% ========================== PART 2: 正文 ==========================
+% 【重要】正文从阿拉伯数字 1 开始，显示 "Page X of Y"
+\newpage
+\pagestyle{fancy}
+\fancyhf{} % 清空页眉页脚
+\fancyhead[L]{\small Team \#2617892}
+\fancyhead[R]{\small Page \thepage\ of \themainpages}
+\fancyfoot[C]{} % 页脚留空
+
+% --- 正文各章节 ---
+\input{sections/01_intro.tex}           % 引言：问题重述 + 文献综述
+\input{sections/02_data.tex}            % 数据预处理（C题核心）
+\input{sections/03_assumptions.tex}     % 假设与符号说明
+\input{sections/04_model.tex}           % 数学模型
+\input{sections/05_solution.tex}        % 求解算法
+\input{sections/06_validation.tex}      % 模型验证
+\input{sections/07_policy.tex}          % 政策建议 / 敏感性分析
+\input{sections/08_strengths.tex}       % 优缺点总结
 
 % --- 参考文献 ---
 \newpage
+\nocite{*} % 模板占位：避免 biber 提示 "does not contain any citations" / 空参考文献
 \printbibliography[heading=bibintoc, title={References}]
 
-% 【关键】将正文总页数写入 .aux 文件，下次编译时读取
+% 【关键】保存正文总页数
 \savemainpages
 
-% --- 附录 (含 AI 报告) ---
+% ========================== PART 3: 附录 ==========================
+% 【说明】附录不计入 25 页限制，AI Report 单独编页
 \clearpage
 \appendix
-% AI Report 单独计数
-\setcounter{page}{1}
-\fancyhead[R]{Page \thepage\ of \theaipages} % 使用自定义计数器 
+\pagenumbering{gobble}
+\pagestyle{plain}
+\input{appendices/ai_report.tex}
 
-\input{ai_log/ai_report.tex} 
-
-% 【关键】将 AI Report 总页数写入 .aux 文件
-\saveaipages
-
+% ============================================================================
 \end{document}
