--- a/Paper/sections/03_assumptions.tex
+++ b/Paper/sections/03_assumptions.tex
@@ -1,23 +1,112 @@
+% ============================================================================
+%                     Section 3: Assumptions and Notations
+%                          假设条件与符号说明
+% ============================================================================
+% 写作约定：假设需可追溯（给出理由），符号表用 tabularx 自动换行并保持全篇一致。
+% ============================================================================
+
 \section{Assumptions and Notations}
+\label{sec:assumptions}
 
-% 提示：
-% 1. Assumptions: 每一个假设都要有理由（Routines/Reality checks）。例如：“假设政策具有滞后性，理由是政府各部门执行需要时间”。
-% 2. Notations: 符号表必须统一，不要在一个地方用 x，另一个地方用 X。
-
+% ============================================================================
+%                          3.1 基本假设
+% ============================================================================
 \subsection{Basic Assumptions}
-\begin{enumerate}[label=\textbf{H\arabic*.}]
-    \item Global environment remains stable during the prediction period. (Reason: Avoid unpredictable external shocks.)
-    \item \lipsum[4]
+% 【提示】问题重述不要直接复制原题，要用专业术语（如"多目标优化"、"时间序列预测"）进行转述。
+% 【格式】使用 H1, H2... 编号，便于后文引用 "由假设 H3 可知..."
+
+To establish a reasonable and solvable mathematical model, we make the following assumptions. Each assumption is justified with a brief rationale.
+
+\begin{enumerate}[label=\textbf{H\arabic*.}, leftmargin=2em, itemsep=0.5em]
+    
+    \item \textbf{Data Integrity Assumption.}
+    The provided dataset is complete and representative of the real-world scenario.
+    
+    \textit{Rationale:} The official dataset from COMAP is assumed to undergo quality control. Missing values, if any, are handled in our preprocessing pipeline (see Section~\ref{sec:data}).
+    
+    % -----------------------------------------------------------------------
+    
+    \item \textbf{Temporal Stability Assumption.}
+    The underlying patterns and trends observed in historical data remain consistent during the prediction horizon.
+    
+    \textit{Rationale:} Short-term forecasting (e.g., 1--5 years) typically does not experience drastic structural changes unless major disruptions occur.
+    
+    % -----------------------------------------------------------------------
+    
+    \item \textbf{Independence Assumption.}
+    The observations are independently and identically distributed (i.i.d.) within each time window.
+    
+    \textit{Rationale:} This is a standard assumption for many statistical and machine learning models, enabling the use of classical estimators.
+    
+    % -----------------------------------------------------------------------
+    
+    \item \textbf{Policy Lag Assumption.}
+    There exists a time delay between policy implementation and observable effects.
+    
+    \textit{Rationale:} Government policies typically require administrative processes, public communication, and behavioral adaptation periods before measurable impacts emerge.
+    
+    % -----------------------------------------------------------------------
+    
+    \item \textbf{External Shock Exclusion.}
+    We assume no major external shocks (e.g., pandemics, wars, natural disasters) occur during the modeling period.
+    
+    \textit{Rationale:} Such events are inherently unpredictable and would require scenario-based analysis beyond the scope of this competition.
+
 \end{enumerate}
 
+% 【技巧】如果假设过多，可添加 "Additional Assumptions" 子节
+% \subsubsection{Problem-Specific Assumptions}
+% ...
+
+% ============================================================================
+%                          3.2 符号说明
+% ============================================================================
 \subsection{Notations}
-% 提示：使用 longtable 确保表格过长时能自动跨页。
-\begin{longtable}{lp{10cm}l}
-    \toprule
-    \textbf{Symbols} & \textbf{Description} & \textbf{Units} \\
-    \midrule
-    $P_i$ & Population density of region $i$ & $people/km^2$ \\
-    $\omega$ & Weighted coefficient for environmental sustainability & Dim.less \\
-    $\Delta t$ & Time interval of the iteration & years \\
-    \bottomrule
-\end{longtable}
+\label{subsec:notations}
+
+% 【重要】使用 tabularx + X 列类型，让 Description 自动换行
+% 【注意】不要手动用 \\ 或 \newline 断行，tabularx 会自动处理
+
+For clarity and consistency throughout this paper, we define the key symbols and their meanings in Table~\ref{tab:notations}.
+
+% --- 符号表 ---
+\begin{table}[H]
+    \centering
+    \caption{Summary of Key Notations}
+    \label{tab:notations}
+    % 【说明】X 列类型会自动伸缩填充剩余宽度，并自动换行
+    \begin{tabularx}{\textwidth}{c X c}
+        \toprule
+        \textbf{Symbol} & \textbf{Description} & \textbf{Unit} \\
+        \midrule
+        % --- 集合与索引 ---
+        $i, j$ & Indices for regions or entities in the dataset & -- \\
+        $t$ & Time index (year, month, or discrete period) & -- \\
+        $\mathcal{N}$ & Set of all nodes (regions) in the network, $\mathcal{N} = \{1, 2, \ldots, n\}$ & -- \\
+        $\mathcal{T}$ & Time horizon of the study, $\mathcal{T} = \{1, 2, \ldots, T\}$ & -- \\
+        \midrule
+        % --- 输入变量 ---
+        $x_{i,t}$ & Primary feature variable for region $i$ at time $t$ & varies \\
+        $P_i$ & Population density of region $i$ & people/km\textsuperscript{2} \\
+        $G_i$ & GDP per capita of region $i$ & USD \\
+        \midrule
+        % --- 输出/目标变量 ---
+        $y_{i,t}$ & Target variable (prediction objective) for region $i$ at time $t$ & varies \\
+        $\hat{y}_{i,t}$ & Predicted value of $y_{i,t}$ by our model & varies \\
+        \midrule
+        % --- 模型参数 ---
+        $\omega$ & Weighting coefficient for the multi-objective function & -- \\
+        $\lambda$ & Regularization parameter to prevent overfitting & -- \\
+        $\eta$ & Learning rate in gradient-based optimization & -- \\
+        $\Theta$ & Set of all model parameters, $\Theta = \{\theta_1, \theta_2, \ldots\}$ & -- \\
+        \midrule
+        % --- 性能指标 ---
+        $J(\cdot)$ & Objective function to be minimized or maximized & -- \\
+        $\epsilon$ & Error tolerance or convergence threshold & -- \\
+        $\Delta t$ & Time interval between consecutive observations & years \\
+        \bottomrule
+    \end{tabularx}
+\end{table}
+
+% 【高级技巧】如果符号太多，可以按类别分成多个小表格
+% 例如：Table 2a - Input Variables, Table 2b - Model Parameters
