--- a/Paper/sections/05_solution.tex
+++ b/Paper/sections/05_solution.tex
@@ -5,12 +5,14 @@
 % 2. 符合常理吗：讨论结果是否符合直觉，并分析其背后的社会或经济原因。
 
 \subsection{Simulation Results}
-% 提示：先注释掉下面这行，直到你把真实的图片放入 figures/ 文件夹并重命名为 main_results.png
-% \includegraphics[width=0.8\textwidth]{figures/main_results.png}
 
-\begin{center}
-    \fbox{Place your result charts here (e.g., figures/main\_results.png)}
-\end{center}
+% 图示规范：优先使用 PDF 矢量图；若用 PNG，确保分辨率足够且字号可读。
+\begin{figure}[H]
+  \centering
+  \fbox{\parbox[c][0.32\textheight][c]{0.85\textwidth}{\centering\textbf{Placeholder Figure}}}
+  \caption{Results visualization placeholder.}
+  \label{fig:results_placeholder}
+\end{figure}
 
 \subsection{Comparative Analysis}
 % 提示：如果可能，跟现有的其他简单模型做个对比，显示出你们模型的优越性。
